# msword

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-04-25-msword-editor-design.md
src/msword/: __init__.py  __main__.py  app.py
src/msword/commands/: __init__.py  base.py  frame.py  macro.py  page.py  stack.py  style.py
src/msword/feat/: __init__.py  find_engine.py  toc.py
tests/: conftest.py
tests/integration/: test_app_smoke.py  test_block_handles.py  test_bubble_menu.py  test_canvas.py  test_colors_palette.py  test_e2e_smoke.py  test_find_replace_dialog.py  test_glyphs_palette.py  test_i18n.py  test_layers_palette.py  test_main_window_menus.py  test_markdown_shortcuts.py  test_measurements_palette.py  test_outline_palette.py  test_pages_palette.py  test_pdf_export.py  test_pdf_x.py  test_slash_menu.py  test_style_sheets_palette.py  test_tools_linker.py  test_tools_palette.py  test_tools_table.py
tests/layout/: test_baseline_grid.py  test_composer_chain_overflow.py  test_composer_columns.py  test_composer_ltr.py  test_composer_rtl_arabic.py  test_footnote_layout.py  test_knuth_plass.py
tests/unit/: test_asset.py  test_block.py  test_blocks_basic.py  test_blocks_pack1.py  test_blocks_pack2.py  test_bootstrap.py  test_color.py  test_commands.py  test_document.py  test_docx_export.py  test_docx_import.py  test_find_engine.py  test_footnote_block.py  test_frame.py  test_master_page.py  test_msdoc_io.py  test_page.py  test_run.py  test_story.py  test_style.py  test_table_frame.py  test_toc.py
(+105 files in other folders)
