[project]
name = "msword"
version = "0.0.1"
description = "Professional document editor & DTP platform — PySide6, frame-first, block-based, full Bidi/Arabic/Urdu, PDF/X export"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ahmed Ali Adeel", email = "ahmedaliadeel@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "PySide6>=6.6,<7",
    "pikepdf>=9.0",
    "python-docx>=1.1",
    "lxml>=5",
    "Pillow>=10",
]

[project.scripts]
msword = "msword.app:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-qt>=4.4",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/msword"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["PySide6.*", "pikepdf.*", "docx.*", "lxml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
